<resources>
    <!--COMON-->
    <string name="app_name">Uncle Bob</string>
    <string name="menu_header_name">Пицерия Uncle Bob</string>
    
    <string name="pizza_shop_name">Uncle Bob</string>
    <string name="pizza_shop_greeting">Доставка вкусной пиццы в Казани</string>
    <string name="pizza_shop_default_city">Казань</string>
    <string name="pizza_shop_tel">89033071935</string>
    <string name="delivery_info">
        \tПиццерия "Uncle Bob" осуществляет доставку пиццы с 11.00 до 22.00.\n
        \tПри заказе от 500р. доставка бесплатно в Приволжский, Советский, Вахитовский, Ново-Савиновский районы.\n
        \tВ другие районы доставка 100р.\n
        \tПри заказе до 500р. доставка будет стоить - 100р.
    </string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_option_menu">Меню</string>
    <string name="navigation_drawer_option_sales">Акции</string>
    <string name="navigation_drawer_option_basket">Корзина</string>
    <string name="navigation_drawer_option_account">Аккаунт</string>
    <string name="navigation_drawer_option_history">История заказов</string>
    <string name="navigation_drawer_option_about">Условия доставки</string>
    <string name="navigation_drawer_option_call">Позвонить нам</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_contacts">Контакты</string>

    <string name="action_settings">Settings</string>
    
    <!--MOCKS-->
    <string name="pizza_placeholder_title">Неополитано классик нео (с грибами) (закрытая)</string>
    <string name="pizza_placeholder_price">до 1 000 000 ₽</string>
    <string name="pizza_placeholder_contains">Ветчина, охотничьи колбаски, грибы шампиньоны, помидоры, маслины, сыр, соус.</string>
    <string name="pizza_placeholder_sauce1">масло на базилике (20 ₽)</string>
    <string name="pizza_placeholder_sauce2">масло на тимьяне и чесноке (20 ₽)</string>
    <string name="pizza_placeholder_sauce3">масло на чесноке и красн. перце (20 ₽)</string>
    <string name="pizza_placeholder_weight1">440 г / 280 ₽</string>
    <string name="pizza_placeholder_weight2">665 г / 400 ₽</string>
    <!--Pizza and Weight-->
    <string name="item_details_weight">Вес</string>
    <string name="item_details_sauces">Соусы</string>
    <string name="item_details_buy">Купить!</string>
    <string name="item_details_contains">Состав</string>
    <string name="item_details_weight_postfix">\u0020г.</string>
    <string name="item_price_prefix">от\u0020</string>
    <string name="item_price_postfix_unicode">\u20bd</string>
    <string name="item_price_postfix">\u0020руб.</string>
    <string name="basket_price_prefix">Итого:\u0020</string>

    <string name="sauce_basil">Масло на базилике</string>
    <string name="sauce_thyme_and_onion">Масло на тимьяне и чесноке</string>
    <string name="sauce_onion_and_red_pepper">Масло на чесноке и красном перце</string>

    <string name="category_pizza">Пицца</string>
    <string name="category_pizza_cat1">Рекомендованные</string>
    <string name="category_pizza_cat2">Новинки</string>
    <string name="category_pizza_cat3">С грибами</string>
    <string name="category_pizza_cat4">Закрытые</string>
    <string name="category_refreshments">Закуски</string>
    <string name="category_salads">Салаты</string>
    <string name="category_drinks">Напитки</string>

    <string name="title_fragment_basket">Корзина</string>
    <string name="title_fragment_category_list">Категории</string>
    <string name="report_as_a_bug">REPORT AS A BUG</string>
    <string name="bullet">\u2022</string>

    <string name="basket_empty_message_part1">Корзина пуста! :(</string>
    <string name="basket_empty_message_part2">Но вы можете что-нибудь в неё положить!</string>
    <string name="basket_empty_goto_pizza">Посмотреть на пиццы</string>
    <string name="basket_order_accepted">Ваш заказ принят!</string>

    <string name="user_name">Имя</string>
    <string name="user_phone_number">Телефон</string>
    <string name="user_delivery_address">Адрес доставки</string>
    <string name="user_save_data">Сохранить данные</string>

</resources>
