<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_cloche"
            android:title="@string/navigation_drawer_option_menu" />

        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_cart"
            android:title="@string/navigation_drawer_option_basket" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/navigation_drawer_option_account" />
    </group>

    <item android:title="@string/navigation_drawer_contacts">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_call"
                android:onClick="callUncleBob"
                android:title="@string/navigation_drawer_option_call" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info"
                android:title="@string/navigation_drawer_option_about" />
        </menu>
    </item>

</menu>
