<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_collapseParallaxMultiplier="1.0">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/pizza_placeholder_image_180x180"
            android:id="@+id/item_details_image" />
    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:text="@string/item_details_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_details_weight"
                android:orientation="horizontal">
                <ToggleButton
                    android:textOff="@string/pizza_placeholder_weight1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <ToggleButton
                    android:textOn="@string/pizza_placeholder_weight2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true" />
            </RadioGroup>

            <TextView
                android:text="@string/item_details_sauces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_details_sauces"
                android:orientation="vertical">
                <CheckBox
                    android:text="@string/pizza_placeholder_sauce1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
                <CheckBox
                    android:text="@string/pizza_placeholder_sauce2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:text="@string/pizza_placeholder_sauce3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
            </LinearLayout>

            <TextView
                android:text="@string/pizza_placeholder_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:id="@+id/item_details_price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:text="@string/item_details_contains"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />
            <TextView
                android:text="@string/pizza_placeholder_contains"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/item_details_contains"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
