<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:text="@string/basket_empty_message_part1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"/>
        <!-- android:lineSpacingMultiplier="1.5" -->

        <TextView
            android:text="@string/basket_empty_message_part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basket_empty_goto_pizza"
            android:id="@+id/empty_basket_button"
            android:background="@color/colorAccent"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:padding="@dimen/activity_horizontal_margin"/>
    </LinearLayout>
</FrameLayout>