<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_preview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:minHeight="@dimen/preview_item_image_height"
    android:maxHeight="@dimen/preview_item_image_height">

    <LinearLayout
        android:layout_width="@dimen/preview_item_image_height"
        android:layout_height="@dimen/preview_item_image_height"
        android:id="@+id/item_preview_image_container"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/pizza_placeholder_image_180x180"
            android:id="@+id/item_preview_image"
            android:adjustViewBounds="true"
            android:cropToPadding="false" />
    </LinearLayout>

    <TextView
        android:text="@string/pizza_placeholder_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_preview_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/item_preview_image_container"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/item_preview_image_container" />

    <TextView
        android:text="@string/report_as_a_bug"
        android:maxLength="90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_description"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
        android:layout_below="@+id/item_preview_title"
        android:layout_toRightOf="@+id/item_preview_image_container"
        android:layout_toEndOf="@+id/item_preview_image_container"
        android:ellipsize="end"/>

    <TextView
        android:text="@string/pizza_placeholder_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_preview_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:layout_alignBottom="@+id/item_preview_image_container"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:layout_alignBottom="@+id/item_description" />
</RelativeLayout>