<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_collapseParallaxMultiplier="1.0">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/details_item_image_height"
            app:srcCompat="@drawable/pizza_placeholder_image_180x180"
            android:id="@+id/item_details_image"
            android:minHeight="@dimen/details_item_image_height"
            android:maxHeight="@dimen/details_item_image_height"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="999dp"
        android:background="@color/colorPrimary">
        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:id="@+id/item_details_description_container"
                android:baselineAligned="false">

                <TextView
                    android:text="@string/item_details_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_details_weight_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:visibility="gone"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_details_weight"
                    android:orientation="horizontal"
                    android:visibility="gone">
                    <!-- Some weight buttons here -->
                </RadioGroup>

                <TextView
                    android:text="@string/item_details_sauces"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:id="@+id/item_details_sauces_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:visibility="gone"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_details_sauces"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <!-- Some sauce checkboxes here -->
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/pizza_placeholder_price"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/item_details_price"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:layout_weight="2"/>

                    <Button android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/item_details_buy"
                        android:background="@color/colorAccent"
                        android:id="@+id/item_details_buy" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_weight="4"
                        android:text="-"
                        android:background="@color/colorAccent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:id="@+id/item_details_quantity_decrease"
                        android:visibility="gone"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:text="1"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:inputType="number"
                        android:background="#FFFFFF"
                        android:id="@+id/item_details_quantity"
                        android:visibility="gone"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_weight="4"
                        android:text="+"
                        android:background="@color/colorAccent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:id="@+id/item_details_quantity_increase"
                        android:visibility="gone"/>

                </LinearLayout>


                <TextView
                    android:text="@string/item_details_contains"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_details_contains_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:visibility="gone"/>
                <TextView
                    android:text="@string/pizza_placeholder_contains"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/item_details_contains"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:visibility="gone"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
